--- a/new web pageee/public/index.html
+++ b/new web pageee/public/index.html
@@ -1,32 +1,257 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0ea5e9" />
-    <meta
-      name="description"
-      content="Global Medical Guidelines AI Hub - Real-time clinical practice guidelines from leading medical organizations"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Global Medical Guidelines AI Hub</title>
-    
-    <!-- Preconnect to Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
-    <!-- Meta tags for social sharing -->
-    <meta property="og:title" content="Global Medical Guidelines AI Hub" />
-    <meta property="og:description" content="Real-time clinical practice guidelines from leading medical organizations" />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Global Medical Guidelines AI Hub" />
-    <meta name="twitter:description" content="Real-time clinical practice guidelines from leading medical organizations" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html> 
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <meta name="description" content="Global Medical Guidelines AI Hub - Real-time clinical practice guidelines from leading medical organizations" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <title>Global Medical Guidelines AI Hub</title>
+
+  <!-- Preconnect to Google Fonts for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+          },
+          colors: {
+            'medical-blue': '#0ea5e9',
+            'light-gray': '#f3f4f6',
+          }
+        }
+      }
+    }
+  </script>
+
+  <!-- Meta tags for social sharing -->
+  <meta property="og:title" content="Global Medical Guidelines AI Hub" />
+  <meta property="og:description" content="Real-time clinical practice guidelines from leading medical organizations" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Global Medical Guidelines AI Hub" />
+  <meta name="twitter:description" content="Real-time clinical practice guidelines from leading medical organizations" />
+</head>
+<body class="bg-light-gray text-gray-800 font-sans">
+  <!-- Header -->
+  <header class="bg-white shadow-md sticky top-0 z-10">
+    <div class="container mx-auto px-4 py-4 flex flex-col md:flex-row justify-between items-center">
+      <div class="flex items-center mb-4 md:mb-0">
+        <div class="bg-medical-blue w-10 h-10 rounded-full mr-3"></div>
+        <h1 class="text-2xl font-bold text-gray-900">Global Medical Guidelines AI Hub</h1>
+      </div>
+      <div class="w-full md:w-1/3">
+        <input
+          type="text"
+          id="search-bar"
+          placeholder="Search guidelines..."
+          class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-medical-blue"
+        />
+      </div>
+      <div class="mt-4 md:mt-0 text-sm text-gray-600">
+        Last Updated: <span id="last-updated">Loading...</span>
+      </div>
+    </div>
+  </header>
+
+  <main class="container mx-auto px-4 py-8 flex flex-col md:flex-row">
+    <!-- Sidebar Filters -->
+    <aside class="w-full md:w-1/4 mb-6 md:mb-0 md:mr-6">
+      <div class="bg-white p-4 rounded-lg shadow">
+        <h2 class="text-lg font-semibold mb-4">Filters</h2>
+
+        <div class="mb-4">
+          <label class="block text-sm font-medium text-gray-700 mb-1">Organization</label>
+          <select id="filter-source" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-medical-blue">
+            <option value="">All</option>
+            <option value="WHO">WHO</option>
+            <option value="CDC">CDC</option>
+            <option value="NICE">NICE</option>
+            <option value="AHA">AHA</option>
+            <option value="IDSA">IDSA</option>
+            <option value="ADA">ADA</option>
+          </select>
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-medium text-gray-700 mb-1">Specialty</label>
+          <select id="filter-specialty" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-medical-blue">
+            <option value="">All</option>
+            <option value="Infectious Disease">Infectious Disease</option>
+            <option value="Cardiology">Cardiology</option>
+            <option value="Endocrinology">Endocrinology</option>
+            <option value="Public Health">Public Health</option>
+            <option value="Primary Care">Primary Care</option>
+          </select>
+        </div>
+
+        <div class="mb-4">
+          <label class="block text-sm font-medium text-gray-700 mb-1">Year</label>
+          <select id="filter-year" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-medical-blue">
+            <option value="">All</option>
+            <option value="2025">2025</option>
+            <option value="2024">2024</option>
+            <option value="2023">2023</option>
+          </select>
+        </div>
+
+        <button id="apply-filters" class="w-full bg-medical-blue text-white py-2 rounded-lg hover:bg-blue-500 transition duration-200">
+          Apply Filters
+        </button>
+      </div>
+    </aside>
+
+    <!-- Main Content Area -->
+    <section class="w-full md:w-3/4">
+      <div id="guidelines-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <!-- Loading State -->
+        <div class="col-span-full text-center py-10">
+          <p class="text-lg text-gray-600">Fetching the latest medical guidelines...</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-white border-t mt-10 py-6">
+    <div class="container mx-auto px-4 text-center text-gray-600 text-sm">
+      &copy; 2025 Global Medical Guidelines AI Hub. All data sourced from official medical organizations.
+    </div>
+  </footer>
+
+  <!-- Script for fetching and rendering guidelines -->
+  <script>
+    // Sample data based on the provided webpages
+    const sampleGuidelines = [
+      {
+        title: "Dapagliflozin for treating chronic kidney disease",
+        source: "NICE",
+        date: "2025-07-02",
+        link: "https://www.nice.org.uk/guidance/TA1075",
+        summary: "This technology appraisal recommends dapagliflozin for treating chronic kidney disease in adults with a urine albumin-to-creatinine ratio of 30 mg/g or more and an estimated glomerular filtration rate (eGFR) of 25 ml/min/1.73 m² or more.",
+        tags: ["CKD", "Diabetes", "Nephrology"]
+      },
+      {
+        title: "COVID-19 Mortality and Progress Toward Vaccinating Older Adults",
+        source: "CDC",
+        date: "2023-01-01",
+        link: "https://www.cdc.gov/mmwr/volumes/72/wr/mm7201a1.htm",
+        summary: "This report analyzes global trends in COVID-19 mortality among older adults and tracks progress in vaccination efforts. It highlights disparities and effective strategies used by different countries.",
+        tags: ["COVID-19", "Vaccination", "Public Health"]
+      },
+      {
+        title: "Adagrasib for previously treated KRAS G12C mutation-positive advanced non-small-cell lung cancer (terminated appraisal)",
+        source: "NICE",
+        date: "2025-07-02",
+        link: "https://www.nice.org.uk/guidance/TA1076",
+        summary: "The appraisal of adagrasib for treating KRAS G12C mutation-positive advanced non-small-cell lung cancer has been terminated. This decision was made due to insufficient evidence on its clinical effectiveness.",
+        tags: ["Lung Cancer", "Oncology", "Targeted Therapy"]
+      },
+      {
+        title: "Nemolizumab for treating moderate to severe atopic dermatitis in people 12 years and over",
+        source: "NICE",
+        date: "2025-07-02",
+        link: "https://www.nice.org.uk/guidance/TA1077",
+        summary: "Nemolizumab is recommended as an option for treating moderate to severe atopic dermatitis in people aged 12 years and over who are candidates for systemic therapy.",
+        tags: ["Dermatology", "Atopic Dermatitis", "Immunology"]
+      },
+      {
+        title: "Early Estimates of Bivalent mRNA Booster Dose Vaccine Effectiveness...",
+        source: "CDC",
+        date: "2023-01-20",
+        link: "https://www.cdc.gov/mmwr/volumes/72/wr/mm7203a1.htm",
+        summary: "Preliminary findings suggest that the bivalent mRNA booster dose provides significant protection against symptomatic infection from the Omicron BA.5 and XBB/XBB.1.5 sublineages in immunocompetent adults.",
+        tags: ["COVID-19", "Vaccination", "Infectious Disease"]
+      },
+      {
+        title: "Antimicrobial prescribing guidelines",
+        source: "NICE",
+        date: "2023-06-15",
+        link: "https://www.nice.org.uk/guidance/ng118",
+        summary: "These guidelines provide evidence-based recommendations on the appropriate use of antibiotics for common infections in primary and secondary care to help reduce antimicrobial resistance.",
+        tags: ["Antibiotics", "Prescribing", "Infectious Disease"]
+      }
+    ];
+
+    // Function to render guidelines
+    function renderGuidelines(guidelines) {
+      const container = document.getElementById('guidelines-container');
+      container.innerHTML = ''; // Clear previous content
+
+      if (guidelines.length === 0) {
+        container.innerHTML = '<div class="col-span-full text-center py-10"><p class="text-lg text-gray-600">No guidelines found matching your criteria.</p></div>';
+        return;
+      }
+
+      guidelines.forEach(item => {
+        const card = document.createElement('div');
+        card.className = 'bg-white rounded-lg shadow hover:shadow-md transition duration-300 overflow-hidden';
+        card.innerHTML = `
+          <div class="p-5">
+            <div class="flex justify-between items-start mb-2">
+              <h3 class="text-lg font-semibold text-gray-900">${item.title}</h3>
+              <span class="bg-medical-blue text-white text-xs font-medium px-2 py-1 rounded">${item.source}</span>
+            </div>
+            <p class="text-sm text-gray-500 mb-3">${new Date(item.date).toLocaleDateString()}</p>
+            <ul class="list-disc pl-5 mb-4 text-sm text-gray-700 space-y-1">
+              ${item.summary.split('. ').slice(0, 3).map(point => `<li>${point.trim()}.</li>`).join('')}
+            </ul>
+            <div class="flex flex-wrap gap-1 mb-4">
+              ${item.tags.map(tag => `<span class="bg-gray-100 text-gray-800 text-xs px-2 py-1 rounded">${tag}</span>`).join('')}
+            </div>
+            <a href="${item.link}" target="_blank" rel="noopener noreferrer" class="inline-block text-medical-blue hover:underline font-medium text-sm">
+              Read Full Guideline
+            </a>
+          </div>
+        `;
+        container.appendChild(card);
+      });
+    }
+
+    // Simulate fetching data and updating last updated time
+    document.addEventListener('DOMContentLoaded', () => {
+      // Set last updated time
+      document.getElementById('last-updated').textContent = new Date().toLocaleString();
+
+      // Render initial sample data
+      renderGuidelines(sampleGuidelines);
+
+      // Apply filters
+      document.getElementById('apply-filters').addEventListener('click', () => {
+        const sourceFilter = document.getElementById('filter-source').value.toLowerCase();
+        const specialtyFilter = document.getElementById('filter-specialty').value.toLowerCase();
+        const yearFilter = document.getElementById('filter-year').value;
+
+        const filtered = sampleGuidelines.filter(item => {
+          const matchesSource = sourceFilter ? item.source.toLowerCase().includes(sourceFilter) : true;
+          const matchesSpecialty = specialtyFilter ? item.tags.some(tag => tag.toLowerCase().includes(specialtyFilter)) : true;
+          const matchesYear = yearFilter ? item.date.startsWith(yearFilter) : true;
+          return matchesSource && matchesSpecialty && matchesYear;
+        });
+
+        renderGuidelines(filtered);
+      });
+
+      // Simple search functionality
+      document.getElementById('search-bar').addEventListener('input', (e) => {
+        const searchTerm = e.target.value.toLowerCase();
+        const filtered = sampleGuidelines.filter(item =>
+          item.title.toLowerCase().includes(searchTerm) ||
+          item.summary.toLowerCase().includes(searchTerm) ||
+          item.tags.some(tag => tag.toLowerCase().includes(searchTerm))
+        );
+        renderGuidelines(filtered);
+      });
+    });
+  </script>
+</body>
+</html>
